criacao do html basico

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,171 @@
     <head>
         <meta charset="UTF-8">
         <title>Python - Unisanta</title>
+        <link href="index.css" rel="stylesheet">
     </head>
 
     <body>
+      <div>
+        <input type="text" required name="nome-usuario" id="nome-usuario" value="Eu mesmo">
+      </div>
+
+      <div class="chat">
+          <div class="mensagens">
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+            <p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+            </p>
+              <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          <p>
+            <strong>Ciclano: </strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at laoreet enim, vulputate vestibulum diam. Cras vitae justo non tellus semper cursus eget nec ante.
+          </p>
+          </div>
+
+          <div>
+            <form>
+              <input type="text" name="mensagem" required id="mensagem" value="">
+              <input type="button" value="Enviar"/>
+            </form>
+          </div>
+      </div>
+
+      <div>
+      </div>
+
     </body>
 </html> 
